Fix colors in dark mode

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@ body {
 
 body.dark {
   --bg-color: #232327;
+  --bg-secondary-color: #131316;
+  --font-color: #f5f5f5;
+  --color-grey: #ccc;
+  --color-darkGrey: #777;
 }
 
 .container {
